--- a/Frontend/Views/SpellsPageView.xaml
+++ b/Frontend/Views/SpellsPageView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Frontend.Views.CharacterSheetPageView"
+﻿<Page x:Class="Frontend.Views.SpellsPageView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Frontend.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="CharacterSheetPageView">
+      Title="SpellsPageView">
 
     <Grid>
         
