--- a/Frontend/Views/Pages/SettingsPageView.xaml
+++ b/Frontend/Views/Pages/SettingsPageView.xaml
@@ -1,12 +1,13 @@
-﻿<Page x:Class="Frontend.Views.InventoryPageView"
+﻿<Page x:Class="Frontend.Views.Pages.SettingsPageView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Frontend.Views"
-      mc:Ignorable="d" 
+      xmlns:utility="clr-namespace:Frontend.Utility"
+      mc:Ignorable="d"
+      utility:ViewModelLocator.AutoWireViewModel="True" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="InventoryPageView">
+      Title="SettingsPageView">
 
     <Grid>
         
